# rust_wasi_plugin_experiment

./: .gitignore  Cargo.toml  LICENSE  README.md  gulpfile.js  package-lock.json  wapm.toml
crates/wasm-data/: Cargo.toml
crates/wasm-data/src/: lib.rs
crates/wasm-plugin-foo/: Cargo.toml  wapm.toml
crates/wasm-plugin-foo/src/: main.rs
crates/wasm-plugin-macro/: Cargo.toml  README.md
crates/wasm-plugin-macro/src/: lib.rs
crates/wasm-plugin-runner/: Cargo.toml
crates/wasm-plugin-runner/src/: main.rs
crates/wasm-plugin-runner/src/commands/: foo.rs
